--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "core-js": "^2.6.9",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
+    "node-sass": "^4.12.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.8.26"
@@ -48,6 +49,7 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.2.2"
+    "typescript": "~3.2.2",
+    "webpack": "^4.41.1"
   }
 }
