interpolation is working variably based on url fragment. probably not the most performant way – but it's fine for my small json doc.

--- a/src/assets/projects-data.json
+++ b/src/assets/projects-data.json
@@ -1,7 +1,7 @@
 {
   "data": [{
       "id": 1,
-      "name": "Prive AV",
+      "name": "Prime AV",
       "type": "Marketing Site",
       "length": "xxx",
       "description": "A mid-scale Audio Visuals company needed to create a website to legitimze their new sibling company. I spun this site up in under 6 hours of legitimate work, it's a pretty basic informational site + contact widget, and that is all they really paid for.",
