piped/sanitized the url for the iframe – broke the url for the iframe

--- a/src/assets/projects-data.json
+++ b/src/assets/projects-data.json
@@ -32,8 +32,8 @@
       "name": "ExpertVoice Studios",
       "type": "Marketing Site",
       "length": "",
-      "description": "This is a joint venture between a few friends and I. It is basically a replacement for craigslist geared specifically towards university students. Users of our site avoid the spam and the privacy concerns, not to mention the archaic UX, that Craigslist is widely known for.",
-      "responsibilities": "I own all user experience aspects of this site. It started as wireframes, moved to high fidelity mocks, where we tested, the I built and styled all the components in angular 6. My cofounders handled the data architecture and the integrations with other sites, as well as security – but the design was all me.",
+      "description": "This is a site I put together, meant to house all the great work that our agency created. I faught a terribly annoying wordpress plugin, and accomplished like 80% of my goal for usability and interface design.",
+      "responsibilities": "xx",
       "logo": "assets/clients/expertvoice/ev-logo.png",
       "header": "assets/clients/expertvoice/ev-tile.jpg",
       "preview": "assets/clients/expertvoice/ev-preview.jpg",
