--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jquery": "^3.4.1",
     "node-sass": "^4.12.0",
     "rxjs": "~6.3.3",
+    "safe-pipe": "^0.3.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.8.26"
   },
