--- a/src/assets/projects-junkyard.json
+++ b/src/assets/projects-junkyard.json
@@ -1,6 +1,75 @@
 {
   "data": [{
-
+    {
+      "id": 8,
+      "name": "Sawyer",
+      "type": "Agency Work",
+      "length": "17",
+      "writer": "Jenna Anderson",
+      "description": "Sawyer’s new Select Filters and Purifiers use a proprietary foam adsorption technology that is changing the game in water filtration.We created a new piece of micro-content showcasing their newest product line.",
+      "logo": "assets/clients/sawyer/sawyer-logo.png",
+      "goal": "Brand awareness, product seeding",
+      "header": "assets/clients/sawyer/sawyer-tile.jpg",
+      "preview": "assets/clients/sawyer/sawyer-preview.jpg",
+      "video": "assets/clients/sawyer/sawyer-recording.mp4",
+      "budget": "31,540",
+      "scope": "3 modules",
+      "stakeholder": "",
+      "path": "sawyer",
+      "url": "https://www.experticity.com/sign-in?identifier=salesdemo&password=access&signInRedirect=%2Flearn%2Fpreview%3FmoduleId%3D13848%26campaignId%3D5688"
+    },
+    {
+      "id": 7,
+      "name": "Topo Designs",
+      "type": "Agency Work",
+      "length": "3",
+      "writer": "Jenna Anderson",
+      "description": "XXX",
+      "logo": "assets/clients/topo/topo-logo.png",
+      "header": "assets/clients/topo/topo-tile.jpg",
+      "preview": "assets/clients/topo/topo-preview-image.jpg",
+      "budget": "xxx",
+      "goal": "XXX",
+      "scope": "New Content",
+      "quote": "XXX",
+      "stakeholder": "XXX",
+      "path": "topo",
+      "url": "https://www.experticity.com/sign-in?identifier=salesdemo&password=access&signInRedirect=%2Flearn%2Fpreview%3FmoduleId%3D15687%26campaignId%3D5688"
+    },
+    {
+      "id": 15,
+      "name": "Hydro Flask",
+      "goal": "Brand awareness, product seeding",
+      "type": "Agency Work",
+      "length": "6",
+      "writer": "Seth Merrill, Jenn Olsen",
+      "description": "I inherited this project after 2 sites had already been built, we had missed the mark. I was in charge of rebuilding both sites and fixing the client relationship. What I created was more in line with what the client wanted originally and the only edits we had to make were adding 8413651864 icons. A big brand for ExpertVoice, not much contract value, because the bulk of our revenue was made in order commission.",
+      "logo": "assets/clients/hydroflask/hydroflask-logo.png",
+      "header": "assets/clients/hydroflask/hydroflask-tile.jpg",
+      "preview": "assets/clients/hydroflask/hydroflask-preview.jpg",
+      "budget": "4,500",
+      "responsibilities": "generic",
+      "stakeholder": "Nazera Carlson, Retail Marketing Specialist",
+      "scope": "2 modules",
+      "path": "hydroflask",
+      "url": "https://www.experticity.com/sign-in?identifier=salesdemo&password=access&signInRedirect=%2Flearn%2Fpreview%3FmoduleId%3D15604%26campaignId%3D5688"
+    },
+    {
+      "id": 12,
+      "name": "Zeal Optics",
+      "goal": "Brand awareness, product seeding",
+      "type": "Agency Work",
+      "length": "8",
+      "writer": "Seth Merrill",
+      "description": "In this overhaul we set Zeal Optics up for a more focused, seasonally-relevant approach. For this coming winter season, members will be reminded of what Zeal Optics stands for, as well as learn about the latest goggles and goggle technologies.",
+      "logo": "assets/clients/zeal/zeal-logo.png",
+      "header": "assets/clients/zeal/zeal-tile.jpg",
+      "preview": "assets/clients/zeal/zeal-preview-image.jpg",
+      "budget": "28,900",
+      "scope": "2 modules",
+      "stakeholder": "Mike Lewis, Director of Brand Activation & Digital Strategy",
+      "path": "zeal",
+      "url": "https://www.experticity.com/sign-in?identifier=salesdemo&password=access&signInRedirect=%2Flearn%2Fpreview%3FmoduleId%3D14022%26campaignId%3D5688"
     {
       "id": 8,
       "name": "Oakley",
