--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "core-js": "^2.6.9",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
+    "ngx-scrollreveal": "^3.0.0",
     "node-sass": "^4.12.0",
     "rxjs": "~6.3.3",
     "safe-pipe": "^0.3.0",
+    "scrollreveal": "^4.0.5",
     "tslib": "^1.10.0",
     "zone.js": "~0.8.26"
   },
