--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "@angular/router": "~7.2.0",
     "@fortawesome/angular-fontawesome": "^0.5.0",
     "bootstrap": "^4.3.1",
-    "core-js": "^2.6.9",
+    "core-js": "^2.6.10",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "ngx-scrollreveal": "^3.0.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.13.0",
     "rxjs": "~6.3.3",
     "safe-pipe": "^0.3.0",
     "scrollreveal": "^4.0.5",
@@ -37,9 +37,9 @@
     "@angular/cli": "~7.2.3",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
-    "@fortawesome/fontawesome-free": "^5.10.2",
+    "@fortawesome/fontawesome-free": "^5.11.2",
     "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasminewd2": "^2.0.8",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
@@ -53,6 +53,6 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.2.2",
-    "webpack": "^4.41.1"
+    "webpack": "^4.41.2"
   }
 }
